# CPP-Chess

./: .gitignore  CMakeLists.txt  Chess  Makefile  README.md  config.sh
include/: Board.hpp  ChessBoard.hpp  ChessPiece.hpp  E_Color.hpp  Game.hpp  Historical.hpp  Piece.hpp  Player.hpp  Utils.hpp
src/: Board.cpp  ChessBoard.cpp  ChessPiece.cpp  Game.cpp  Historical.cpp  Piece.cpp  Player.cpp  Utils.cpp  main.cpp
tests/: CMakeLists.txt
tests/src/: pieces.cc
